# cdyn

./: .gitignore  CMakeLists.txt  Makefile  cairogui.c  coupled.c  coupled.h  cty.py  dyn.c  dyn.h  main.c  readme  test.c  ui.c
lib/: arr.c  arr.h  conn.c  coupled.c  coupled.h  sparse.c
py/: cty.py  srv.py
py/static/: draw.js
py/templates/: draw.html
